# ANNS-with-CPU-NPU-SSD

./: .gitignore  CMakeLists.txt  README.md
AnnService/: CMakeLists.txt
AnnService/inc/Core/: Common.h  SearchQuery.h  VectorIndex.h
AnnService/inc/Core/BKT/: Index.h
AnnService/inc/Core/Common/: BKTree.h  DistanceUtils.h  IQuantizer.h  InstructionUtils.h  KDTree.h  NeighborhoodGraph.h  PQQuantizer.h  QueryResultSet.h  RelativeNeighborhoodGraph.h  SIMDUtils.h  TruthSet.h  WorkSpace.h
AnnService/inc/Core/SPANN/: ExtraFullGraphSearcher.h  IExtraSearcher.h  Index.h  Options.h  ParameterDefinitionList.h
AnnService/inc/Helper/: VectorSetReader.h
AnnService/inc/Helper/VectorSetReaders/: DefaultReader.h  MemoryReader.h  TxtReader.h  XvecReader.h
AnnService/inc/Quantizer/: Training.h
AnnService/inc/SSDServing/: SSDIndex.h
AnnService/npu_kernel/: add_custom.cpp
AnnService/src/Core/: VectorIndex.cpp
AnnService/src/Core/BKT/: BKTIndex.cpp
AnnService/src/Core/Common/: DistanceUtils.cpp  IQuantizer.cpp  InstructionUtils.cpp  SIMDUtils.cpp
AnnService/src/Core/KDT/: KDTIndex.cpp
AnnService/src/Core/SPANN/: SPANNIndex.cpp
AnnService/src/Helper/VectorSetReaders/: DefaultReader.cpp  TxtReader.cpp  XvecReader.cpp
docs/: GettingStart.md  Parameters.md
